--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "mdbreact": "^4.27.0",
+    "mobiscroll": "^3.0.0-beta6",
+    "node-sass": "^4.14.1",
+    "nuka-carousel": "^4.7.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-grid": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-hooks-lib": "^0.2.0",
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.1",
+    "react-scrolling-nav": "^1.1.5",
+    "react-slideshow-image": "^3.0.2",
+    "react-spring": "^8.0.27",
+    "react-with-gesture": "^4.0.2",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
